force-app/main/default/objects/Product_Location_Component__c/Product_Location_Component__c.object-meta.xml
<CustomObject>
    <description>Junction Object to Indicate, for wich Location I have a product, what kind of components I have</description>
    <label>Product Location Component</label>
    <nameField>
        <label>Product Location Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Location Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>