force-app/main/default/objects/Product_Location_Component__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Location Components</relationshipLabel>
    <relationshipName>Product_Location_Components</relationshipName>
    <type>Lookup</type>
</CustomField>