force-app/main/default/objects/Product_Location_Component__c/fields/PMC_CPQ_Component_Code__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Component_Code__c</fullName>
    <formula>Component__r.PMC_CPQ_SAPProductCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Component Code</label>
    <type>Text</type>
</CustomField>