force-app/main/default/objects/Product_Location_Component__c/fields/PMC_CPQ_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Quantity__c</fullName>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>