force-app/main/default/objects/Product_Location_Component__c/fields/Product_Location__c.field-meta.xml
<CustomField>
    <fullName>Product_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Location</label>
    <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
    <relationshipLabel>Product Location Components</relationshipLabel>
    <relationshipName>Product_Location_Components</relationshipName>
    <type>Lookup</type>
</CustomField>